fixed scrollbars help
https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/commit/1c1476562386b6428dc444bdfd3a566955e42dc6

--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -229,7 +229,7 @@ menu {
   font-size: 18px;
 }
 
-#doc > .col-md-3, #doc > .col-md-8 {
+#doc > .col-md-3, #doc > .col-md-9 {
   height: 790px;
   overflow-y: scroll;
 }
